--- a/templates/feedback_answer.html
+++ b/templates/feedback_answer.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="refresh" content="3;url={% url 'index' %}">
   <title>Ответ</title>
   <!-- Подключение Bootstrap CSS -->
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
@@ -13,10 +14,11 @@
   <div class="row justify-content-center">
     <div class="col-md-6">
       <h2 class="text-center mb-4">Ваша заявка принята</h2>
-
+      <p>Через 3 секунды вы будете перенаправлены на главную страницу...</p>
     </div>
   </div>
 </div>
 
 </body>
+
 </html>
